# app-incubator

./: .gitignore
incubator/backend/: .env.example  approve_blueprint.json  approve_spec.json  pyproject.toml  test_run.json
incubator/backend/app/: config.py  main.py
incubator/backend/app/api/: runs.py
incubator/backend/app/db/: database.py  models.py
incubator/backend/app/pipeline/: stages.py
incubator/backend/app/schemas/: form.py  pipeline.py  run.py
incubator/backend/app/services/: agent_loader.py  blueprint_mapper.py  claude_client.py  pattern_library.py  scaffolder.py  sse_manager.py  version_checker.py  workspace.py
incubator/backend/app/templates/backend/base/: .env.example.j2  README.md.j2  pyproject.toml.j2
incubator/backend/app/templates/backend/base/app/: main.py.j2
incubator/backend/app/templates/backend/base/app/auth/: router.py.j2  service.py.j2
incubator/backend/app/templates/backend/base/app/core/: security.py.j2
incubator/backend/app/templates/backend/base/app/db/: database.py.j2
incubator/backend/app/templates/backend/base/app/models/: user.py.j2
incubator/backend/app/templates/mobile/base/: app.json.j2  package.json.j2
incubator/backend/app/templates/mobile/base/app/: _layout.tsx.j2
incubator/backend/app/templates/mobile/base/app/(auth)/: login.tsx.j2  signup.tsx.j2
incubator/backend/app/templates/modules/: manifest.py
incubator/backend/tests/: conftest.py  test_blueprint_mapper.py  test_claude_client.py  test_db.py  test_pipeline_stages.py  test_runs_api.py  test_scaffolder.py  test_schemas.py
(+39 files in other folders)
